day3/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkinsi2
spec:
  rules:
  - host: jenkins.app.qubernetes.com
    http:
      paths:
      - backend:
          serviceName: jenkins
          servicePort: 8080
