day3/ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: jenkins
spec:
  rules:
  - host: nginx.app.qubernetes.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
